<resources>
    <string name="app_name">MoneyGrow</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>

    <string name="title_slide1">MoneyGrow</string>
    <string name="desc_slide1">คุณสามารถบันทึกรายรับรายจ่ายได้อย่าง \nสดวกและรวดเร็ว</string>

    <string name="title_slide2">ตั้งเป้าหมาย</string>
    <string name="desc_slide2">การที่เราตั้งเป้าหมายในการออม \nมันจะสร้างแรงจูงใจให้คุณประหยัดเงินได้มากขึ้น</string>

    <string name="title_slide3">เติบโตไปด้วยกัน</string>
    <string name="desc_slide3">ทำให้ต้นไม้เติบโตไปด้วยกันกับคุณสิ \nมันช่วยสร้างแรงบรรดาลใจให้คุณได้นะ</string>

    <string name="title_slide4">เริ่มต้นการออม</string>
    <string name="desc_slide4">เราจะทำให้ชีวิตคุณง่ายขึ้น</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_day">วัน</string>
    <string name="action_week">สัปดาห์</string>
    <string name="action_month">เดือน</string>
    <string name="action_year">ปี</string>
    <string name="action_all">ทั้งหมด</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_wallet">กระเป๋าตัง</string>
    <string name="title_goal">เป้าหมาย</string>
    <string name="title_currency">แปลงค่าเงิน</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
